fix work item overflow

--- a/assets/styles/components/_work-item.scss
+++ b/assets/styles/components/_work-item.scss
@@ -11,6 +11,7 @@
   background-color: white;
   box-shadow: 0.3rem 0.6rem 1rem rgba(black, 0.04);
   border-radius: 0.4rem;
+  overflow: hidden;
 }
 
 .c-work-item + .c-work-item {
